X   1.0
    * Change default destroyDropEgg to false in config.yml
    * Preserve comments in config.yml
    * Remove workaround for BUKKIT-602 since its fixed in 1.1-R4
    * Compile for CraftBukkit 1.1-R4

2012-02-08  0.5
    * Add clicking spawner with spawn egg to change type (by default, ops only)
    * Add option to consume spawn egg when clicking spawner to change type
    * Add silkspawners.changetypewithegg permission node
    * Compatibility with modded craftbukkits missing Material.MONSTER_EGG [1.1-R3 ModLoaderMP 1.1r2]
      (craftableSpawners will be disabled, but otherwise everything should work,
      including spawn egg drops - please report any problems)
      Note: this problem has been fixed in 1.1-R4 ModLoaderMP 1.1r3, workaround no longer needed

2012-02-07  0.4.1
    * Ignore cancelled events

2012-02-05  0.4
    * Update for 1.1-R3, working around ignored block update (= pigs) CraftBukkit regression from 1.1-R1
    * Change craftableSpawners default to false
    * Add usePermissions option, to disable use of permission system
    * Change default permissions to 'false' when usePermissions is on
    * Change silkspawners.eggdrop permission node to silkspawners.destroydrop to better reflect purpose
    * Add destroyDropEgg option to control dropping of eggs on destroy
    * Add destroyDropXP option to set level of XP drop on destroy (0 to disable)
    * Add destroyDropBars option to drop iron bars on destroy (0 to disable)
    * Add recognizing spawners picked up from creaturebox, tagged with Respiration enchantment
        (SilkSpawners NOT compatible with creaturebox when both are installed simultaneously)
    * New license (BSD)

2012-01-23  0.3
    * Implemented workaround for BUKKIT-602, spawners are now craftable! (optional)
    * Show creature type when a free spawner item is obtained using /spawner
    * Added more aliases, and copy configuration file to make changes easier